--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
     "jsonfile": "^5.0.0",
     "lodash": "^4.17.11",
     "morgan": "^1.9.1",
+    "nodemon": "^1.18.11",
     "pug": "^2.0.3"
   }
 }
